--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "p_3_strikes = factorial() #answer = 0.2502822"
+    "p_3_strikes = (factorial(10)/ #answer = 0.2502822"
    ]
   },
   {
