Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "(factorial(10)/factorial(3)*factorial(7))*(.25**3)*(.75**7) #answer = 0.2502822"
+    "(factorial(10)/(factorial(3)*factorial(7))*(.25**3)*(.75**7) #answer = 0.2502822"
    ]
   },
   {
