--- a/index.ipynb
+++ b/index.ipynb
@@ -36,22 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6357570.556640625"
+       "0.25028228759765625"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(factorial(10)/(factorial(3)*factorial(7))*(.25**3)*(.75**7) #answer = 0.2502822"
+    "(factorial(10)/(factorial(3)*factorial(7)))*(.25**3)*(.75**7) #answer = 0.2502822"
    ]
   },
   {
