Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "def binom_distr(n,p,k):\n",
-    "    return "
+    "    return (factorial(n)/(factorial(k)*factorial()))*(.25**3)*(.75**7)"
    ]
   },
   {
