--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "def binom_distr(n,p,k):\n",
-    "    return (factorial(n)/(factorial(k)*factorial(n-k)))*(p**k)*((1)**7)"
+    "    return (factorial(n)/(factorial(k)*factorial(n-k)))*(p**k)*((1-p)**(n-))"
    ]
   },
   {
