Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,12 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def binom_distr(n,p,k):\n",
-    "    return (factorial(n)/(factorial(k)*factorial(n-k)))*(p**k)*((1-p)**(n-))"
+    "    return (factorial(n)/(factorial(k)*factorial(n-k)))*(p**k)*((1-p)**(n-k))"
    ]
   },
   {
