Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "# Your code here"
+    "binom_distr(10# Your code here"
    ]
   },
   {
