--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "for i in \n",
     "# Your code here"
    ]
   },
