Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "for i in range(5,11)\n",
+    "for i in \n",
     "# Your code here"
    ]
   },
