--- a/index.ipynb
+++ b/index.ipynb
@@ -82,22 +82,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.25028228759765625"
+       "range(5, 11)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "binom_distr(10,.25,3)# Your code here"
+    "binom_distr(10,.25,3)# Your code here\n",
+    "range(5,11)"
    ]
   },
   {
