Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "for i in range(5,11)\n",
+    "for i in range(5,10):\n",
     "# Your code here"
    ]
   },
