Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,6 +116,7 @@
    "source": [
     "import numpy as np\n",
     "for i in range(5,10):\n",
+    "    bin\n",
     "# Your code here"
    ]
   },
