Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,8 +115,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "pro\n",
     "for i in range(5,10):\n",
-    "    bin\n",
+    "    binom_distr(i)\n",
     "# Your code here"
    ]
   },
