--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "pro\n",
+    "prob = 0\n",
     "for i in range(5,10):\n",
     "    binom_distr(i)\n",
     "# Your code here"
