Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -117,8 +117,7 @@
     "import numpy as np\n",
     "prob = 0\n",
     "for i in range(5,10):\n",
-    "    prob += binom_distr(i)\n",
-    "\n",
+    "    binom_distr(i)\n",
     "# Your code here"
    ]
   },
