Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,15 +110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0781259536743164"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "prob = 0\n",
     "for i in range(5,10):\n",
-    "    prob += binom_distr(i)\n",
-    "\n",
+    "    prob += binom_distr(10,.25,i)\n",
+    "prob\n",
     "# Your code here"
    ]
   },
