Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,25 +110,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0781259536743164"
+       "[0.058399200439453125,\n",
+       " 0.016222000122070312,\n",
+       " 0.00308990478515625,\n",
+       " 0.00038623809814453125,\n",
+       " 2.86102294921875e-05]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "prob = 0\n",
+    "prob = []\n",
     "for i in range(5,10):\n",
-    "    prob += binom_distr(10,.25,i)\n",
+    "    prob.append(binom_distr(10,.25,i))\n",
     "prob\n",
     "# Your code here"
    ]
