Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,8 @@
     "np.random.seed(123)\n",
     "n = 5000\n",
     "sim = []\n",
-    "\n",
+    "for i in range(n):\n",
+    "    \n",
     "#\n",
     "#\n",
     "#\n",
