Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -150,10 +150,9 @@
    "source": [
     "# leave the random seed here \n",
     "np.random.seed(123)\n",
-    "n = 5000\n",
     "sim = []\n",
-    "for i in range(n):\n",
-    "    \n",
+    "for i in range(5):\n",
+    "    sim.\n",
     "#\n",
     "#\n",
     "#\n",
