Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,8 +151,8 @@
     "# leave the random seed here \n",
     "np.random.seed(123)\n",
     "sim = []\n",
-    "for i in range(5):\n",
-    "    sim.\n",
+    "for i in range(5000):\n",
+    "    sim.append(np.random.binomial(10,.25))\n",
     "#\n",
     "#\n",
     "#\n",
