--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,8 @@
     "sim = []\n",
     "for i in range(5000):\n",
     "    sim.append(np.random.binomial(10,.25))\n",
-    "a\n",
+    "array = np.array(sim)\n",
+    "array.\n",
     "#\n",
     "#\n",
     "#\n",
