Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,9 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 2, 3, 4, 5, 6, 7, 8]),\n",
+       " array([ 310,  941, 1368, 1286,  707,  297,   78,   11,    2]))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# leave the random seed here \n",
     "np.random.seed(123)\n",
@@ -154,7 +166,7 @@
     "for i in range(5000):\n",
     "    sim.append(np.random.binomial(10,.25))\n",
     "array = np.array(sim)\n",
-    "array.\n",
+    "np.unique(array, return_counts=True)\n",
     "#\n",
     "#\n",
     "#\n",
